# coffee_store

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/api/crud_operations/: drink_operations.py  order_operations.py  topping_operations.py
app/api/routers/: admin.py  customer.py
app/api/schemas/: drinks.py  orders.py  toppings.py
app/models/: drinks.py  orders.py  toppings.py
app/tests/: conftest.py  test_drink_operations.py  test_order_operations.py  test_test_api.py  test_topping_operations.py
